kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: echo-server
  namespace: notes-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: echo-server

  template:
    metadata:
      labels:
        app: echo-server

    spec:
      containers:
      - name: echo-server

        image: registry.k8s.io/echoserver:1.10

        ports:
        - containerPort: 8080

        livenessProbe:

          httpGet:
            path: /
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:

          httpGet:
            path: /
            port: 8080

          initialDelaySeconds: 5
          periodSeconds: 5
