kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: echo-service
  namespace: notes-app

spec:
  type: ClusterIP

  selector:
    app: echo-server

  ports:
  - port: 80
    targetPort: 8080
