kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: echo-ingress
  namespace: notes-app

spec:
  defaultBackend:
    service:
      name: echo-service
      port:
        number: 80
